--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -17,7 +17,7 @@
 
 # Set everything to be logged to the console
 #log4j.rootCategory=DEBUG, console
-log4j.rootCategory=DEBUG, console,FILE
+log4j.rootCategory=INFO, console,FILE
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
@@ -25,7 +25,7 @@ log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: 
 
 # Set things to be logged to the File
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.Threshold=DEBUG
+log4j.appender.FILE.Threshold=INFO
 log4j.appender.FILE.file=/home/cwei/spark-Tracing/logs/spark.log
 log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
